syntax = "proto3";

package regen.ecocredit.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "regen/ecocredit/v1beta1/state.proto";

option go_package = "github.com/regen-network/regen-ledger/x/ecocredit/v1beta1";

// Params defines the updatable global parameters of the ecocredit module for
// use with the x/params module.
message Params {
  // credit_class_fee is the fixed fee charged on creation of a new credit class
  repeated cosmos.base.v1beta1.Coin credit_class_fee = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];

  // allowed_class_creators is an allowlist defining the addresses with
  // the required permissions to create credit classes
  repeated string allowed_class_creators = 2;

  // allowlist_enabled is a param that enables/disables the allowlist for credit
  // creation
  bool allowlist_enabled = 3;

  // credit_types is a list of definitions for credit types
  repeated CreditType credit_types = 4;
}
